--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,19 +3,32 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #E2DED0;
+  --foreground: #4E4F50;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    /* Chrome, Safari, Opera */
+    display: none; 
+  }
+  .no-scrollbar {
+    /* IE and Edge */
+    -ms-overflow-style: none;
+    /* FireFox */
+    scrollbar-width: none;
+  }
 }
